--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -55762,7 +55762,7 @@
     "Subscribers only" : {
 
     },
-    "Subscribers only is only available for Twitch." : {
+    "Subscribers only is not available for all platforms." : {
 
     },
     "Summary and stream name" : {
