Audio channel mapping live check and naming.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -43114,6 +43114,12 @@
         }
       }
     },
+    "Output channel 1 (Left)" : {
+
+    },
+    "Output channel2 2 (Right)" : {
+
+    },
     "Overhead bandwidth" : {
       "localizations" : {
         "de" : {
