--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -43117,7 +43117,7 @@
     "Output channel 1 (Left)" : {
 
     },
-    "Output channel2 2 (Right)" : {
+    "Output channel 2 (Right)" : {
 
     },
     "Overhead bandwidth" : {
