Text to speech watch button.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -51206,6 +51206,9 @@
         }
       }
     },
+    "Skip current TTS" : {
+
+    },
     "Slow IRL" : {
       "localizations" : {
         "de" : {
