Interactive browser improvements.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -49596,6 +49596,9 @@
         }
       }
     },
+    "Search with Google or enter address" : {
+
+    },
     "Select image" : {
       "localizations" : {
         "de" : {
