Web browser home button settings.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -31099,6 +31099,9 @@
         }
       }
     },
+    "Home" : {
+
+    },
     "Host missing" : {
       "localizations" : {
         "de" : {
@@ -65492,6 +65495,9 @@
           }
         }
       }
+    },
+    "Web browser" : {
+
     },
     "WebSocket" : {
       "localizations" : {
