Chat text to speech user says in correct language.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -2173,6 +2173,16 @@
         }
       }
     },
+    "%@ %@: %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ %2$@: %3$@"
+          }
+        }
+      }
+    },
     "%@ dB" : {
       "localizations" : {
         "de" : {
@@ -2546,6 +2556,7 @@
       }
     },
     "%@ says: %@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
